# lochs

./: LICENSE  lochs.cabal
src/: Main.hs
src/Lochs/: AST.hs  Diagnostic.hs  Eval.hs  Parser.hs  Pretty.hs  Runtime.hs  Scanner.hs
