cabal-version:      3.0
name:               lochs
version:            0.1.0.0
synopsis: Haskell implementation of Bob Nystrom's Lox programming language
license:            MIT
license-file:       LICENSE
author:             Patrick Gingras
maintainer:         775.pg.12@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable lochs
    import:           warnings
    main-is:          Main.hs
    other-modules:    Lochs.Scanner
                    , Lochs.Diagnostic
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   src
    default-language: GHC2024
